<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bcg_color"
    tools:context=".presentation.privacy_policy.PrivacyPolicyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            android:spacing="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/privacy"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Use"
                android:textAppearance="?attr/textAppearanceBody1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="16dp"
                android:text="@string/useText"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sharing"
                android:textAppearance="?attr/textAppearanceBody1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sharingText"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Security"
                android:textAppearance="?attr/textAppearanceBody1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/securityText"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/DataRemoval"
                android:textAppearance="?attr/textAppearanceBody1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DataRemovalText"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/copy_our_email"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/emailTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="6dp"
                        android:text="TextView"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <ImageButton
                        android:id="@+id/copyEmail"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/copy_our_email"
                        android:src="@drawable/baseline_content_copy_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/copy_id"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/idTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="6dp"
                        android:text="TextView"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <ImageButton
                        android:id="@+id/copyID"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/copy_id"
                        android:src="@drawable/baseline_content_copy_24" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>
